--- a/templates/home.html
+++ b/templates/home.html
@@ -83,8 +83,8 @@
       <a href="/" class="navbar-logo">Garage Sale</a>
       <ul class="navbar-menu">
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
+        <li><a href="/upload">Upload</a></li>
         <li><a href="/adminlogin">Admin Login</a></li>
       </ul>
     </div>
