--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,5 @@
 body {
     width: 100%;
-
 }
 
 #login {
@@ -14,6 +13,70 @@ body {
     box-shadow: 5px 5px 5px black;
 }
 
-#eroare {
+#center {
+    text-align: center;
+    text-shadow: 0.2px 0.2px;
+
+}
+
+#submit {
+    text-align: center;
+    text-shadow: 0.2px 0.2px;
+
+}
+#error {
     color: red;
+}
+
+.file-uploader {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 5px 5px 5px black;
+}
+
+/* Styles for the logout link */
+.file-uploader a {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #007bff;
+    text-decoration: none;
+}
+
+
+
+/* Style for the h1 title */
+.file-uploader h1 {
+    font-size: 21px;
+    color: #333;
+    margin-bottom: 40px;
+}
+
+/* Style for the file input and upload button */
+.file-uploader input[type="file"] {
+    margin-bottom: 1px;
+}
+
+.file-uploader input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
+.file-uploader input[type="submit"]:hover {
+    background-color: #0056b3;
 }
