--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,34 +1,21 @@
 body {
-    width: 100%;
+    width: 98%;
 }
 
-#login {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 1px solid grey;
-    padding: 1%;
-    border-radius: 5px;
-    box-shadow: 5px 5px 5px black;
-}
-
-#center {
-    text-align: center;
-    text-shadow: 0.2px 0.2px;
-
-}
-
-#submit {
-    text-align: center;
-    text-shadow: 0.2px 0.2px;
-
-}
 #error {
     color: red;
 }
 
-.file-uploader {
+#del-button {
+    position: relative;
+    left: 40px;
+    right: 10px;
+    color: #007bff;
+    text-decoration: none;
+}
+
+/* Style for file uploader */
+.in-out-up {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,15 +24,14 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background-color: #fff;
+    padding: 1%;
+    border: 1px solid grey;
+    border-radius: 5px;
     box-shadow: 5px 5px 5px black;
 }
 
 /* Styles for the logout link */
-.file-uploader a {
+.in-out-up a {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -54,20 +40,7 @@ body {
 }
 
 
-
-/* Style for the h1 title */
-.file-uploader h1 {
-    font-size: 21px;
-    color: #333;
-    margin-bottom: 40px;
-}
-
-/* Style for the file input and upload button */
-.file-uploader input[type="file"] {
-    margin-bottom: 1px;
-}
-
-.file-uploader input[type="submit"] {
+.in-out-up input[type="submit"] {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -77,6 +50,12 @@ body {
     transition: background-color 0.2s;
 }
 
-.file-uploader input[type="submit"]:hover {
-    background-color: #0056b3;
+.thumbnails {
+    width: 60%;
+    height: 60%; /* adjust the height as needed */
+    object-fit: cover;
+    margin-bottom: 40px;
+    margin-left: 40px;
+    margin-top: 40px;
+    margin-right: 40px;
 }
