--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/style.css">
   <title>Garage Sale</title>
   <style>
     /* Reset some default styles */
@@ -38,6 +39,7 @@
       text-decoration: none;
     }
     .navbar-menu {
+      font-size: 18px;
       display: flex;
       list-style: none;
       margin: 0;
@@ -84,23 +86,26 @@
       <a href="/" class="navbar-logo">Garage Sale</a>
       <ul class="navbar-menu">
         <li><a href="/">Home</a></li>
+        <li><a href="/contact">Contact</a></li>
         <li><a href="/upload">Upload</a></li>
         <li><a href="/adminlogin">Admin Login</a></li>
       </ul>
     </div>
   </nav>
-<div class="cotainer mt-1">
-  <div class="row">
-      {% for image in images %}
-        <div class="col-3 col-md-4 col-sm-6">
-        <link rel="stylesheet" href="/static/css/style.css">
-          <img class="thumbnails" src="/home/{{ image.sha256 }}">
-          {% if session["admin"] %}
-          <button id="del-button">Delete</button>
-          {% endif %}
-        </div>
-      {% endfor %}
+  <div class="container mt-5">
+    <div class="row">
+        {% for image in images %}
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <img class="card-img-top thumbnails" src="/home/{{ image.sha256 }}" alt="Image Description">
+              <div class="card-body">
+                <p class="card-text image-description">{{ image.description }}</p>
+                <p class="card-text image-price">${{ image.price }}</p>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+    </div>
   </div>
-</div>
 </body>
 </html>
