--- a/templates/admin_login/login.html
+++ b/templates/admin_login/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Login{% endblock %}
 {% block body %}
 {{ super() }}
 <div class="in-out-up">
