--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,21 +4,20 @@
 {{ super() }}
 <div class="contact-form">
     <form action="/send_contact" method="POST">
-        <div class="input-group">
-            <label for="name">Name:</label>
-            <input type="text" name="name" required>
+        <div class="input-row">
+            <div class="input-group">
+                <label for="name">Name:</label>
+                <input type="text" name="name" required>
+            </div>
+            <div class="input-group">
+                <label for="email">Email:</label>
+                <input type="email" name="email" required>
+            </div>
         </div>
-
-        <div class="input-group">
-            <label for="email">Email:</label>
-            <input type="email" name="email" required>
-        </div>
-
         <div class="input-group">
             <label for="subject">Subject:</label>
-            <input type="text" name="subject" required>
+            <textarea name="subject" required>Interested in: {{ subject }} {{ price }}</textarea>
         </div>
-
         <input type="submit" value="Send">
     </form>
 </div>
