--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{% endblock %}
+{% block title %}Upload{% endblock %}
 {% block body %}
 {{ super() }}
 <div class="contact-form">
