--- a/templates/home.html
+++ b/templates/home.html
@@ -7,77 +7,15 @@
   <link rel="stylesheet" href="/static/css/style.css">
   <title>Home</title>
   <style>
-    /* Reset some default styles */
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    /* Navbar styles */
-    nav {
-      background-color: #333;
-      padding: 30px 50px;
-    }
-
-    .navbar-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-
-    .navbar-logo {
-      color: #fff;
-      font-size: 35px;
-      font-weight: bold;
-      text-decoration: none;
-    }
-    .navbar-logo:hover{
-      color: green;
-      text-decoration: none;
-    }
-    .navbar-menu {
-      font-size: 18px;
-      display: flex;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    .navbar-menu li {
-      margin-left: 15px;
-    }
-
-    .navbar-menu li a {
-      color: #fff;
-      text-decoration: none;
-      padding: 12px 12px;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-
-    .navbar-menu li a:hover {
-      background-color: #00560e;
-    }
-
-    /* Responsive styles */
-    @media screen and (max-width: 768px) {
-      .navbar-container {
-        flex-direction: column;
-      }
-
-      .navbar-menu {
-        margin-top: 10px;
-      }
-
-      .navbar-menu li {
-        margin-left: 0;
-        margin-bottom: 8px;
-      }
-      
-    }
+    body { margin: 0; padding: 0; font-family: Arial, sans-serif; }
+    nav { background-color: #333; padding: 30px 50px; }
+    .navbar-container { display: flex; justify-content: space-between; align-items: center; }
+    .navbar-logo { color: #fff; font-size: 35px; text-decoration: none; }
+    .navbar-logo:hover { color: green; }
+    .navbar-menu { font-size: 18px; display: flex; list-style: none; margin: 0; padding: 0; }
+    .navbar-menu li { margin-left: 15px; }
+    .navbar-menu li a { color: #fff; text-decoration: none; padding: 12px 12px; border-radius: 5px; transition: background-color 0.3s ease; }
+    .navbar-menu li a:hover { background-color: #00560e; }
   </style>
 </head>
 <body>
