--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 {% block body %}
 {{ super() }}
 <div class="contact-form">
-    <form action="/send_contact" method="POST">
+    <form action="/contact" method="POST">
         <div class="input-row">
             <div class="input-group">
                 <label for="name">Name:</label>
