--- a/templates/home.html
+++ b/templates/home.html
@@ -5,23 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/style.css">
-  <title>Home</title>
   <style>
     body { margin: 0; padding: 0; font-family: Arial, sans-serif; }
-    nav { background-color: #333; padding: 30px 50px; }
+    nav { background-color: #60495e; padding: 30px 50px; }
     .navbar-container { display: flex; justify-content: space-between; align-items: center; }
     .navbar-logo { color: #fff; font-size: 35px; text-decoration: none; }
-    .navbar-logo:hover { color: green; }
+    .navbar-logo:hover { color: #331427; text-decoration: none; }
     .navbar-menu { font-size: 18px; display: flex; list-style: none; margin: 0; padding: 0; }
     .navbar-menu li { margin-left: 15px; }
     .navbar-menu li a { color: #fff; text-decoration: none; padding: 12px 12px; border-radius: 5px; transition: background-color 0.3s ease; }
-    .navbar-menu li a:hover { background-color: #00560e; }
+    .navbar-menu li a:hover { background-color: #331427; }
   </style>
+  <title>Art&Style Violette</title>
 </head>
 <body>
   <nav>
     <div class="navbar-container">
-      <a href="/" class="navbar-logo">Garage Sale</a>
+      <a href="/" class="navbar-logo">Art&Style Violette</a>
       <ul class="navbar-menu">
         <li><a href="/">🏠Home</a></li>
         <li><a href="/contact">✉️Contact</a></li>
@@ -37,10 +37,12 @@
   <div class="container mt-5">
     <div class="row">
         {% for image in images %}
-          <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
             <a href="/contact?subject={{ image.description }}&price={{ image.price }}" class="text-decoration-none text-dark">
               <div class="card h-100">
-                <img class="card-img-top thumbnails" src="/home/{{ image.sha256 }}" alt="Image Description">
+                <div class="image-container">
+                  <img class="card-img-top thumbnails" src="/home/{{ image.sha256 }}" alt="Image Description">
+                </div>
                 <div class="card-body">
                   <p class="card-text image-description">{{ image.description }}</p>
                   <p class="card-text image-price">${{ image.price }}</p>
